# fitforge

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/data/: user_data.csv  user_workout_ratings_full_bias.csv
backend/models/: model_knn.pkl  sparse_matrix.pkl
backend/notebooks/: 01_data_cleaning_and_eda.ipynb  02_feature_engineering.ipynb  03_model_building.ipynb  04_evaluation_and_tuning.ipynb
backend/src/: app.py  auth.py  db.py  recommender.py  schemas.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/history/: page.tsx
frontend/app/dashboard/profile/: page.tsx
frontend/app/dashboard/recommend/: page.tsx
frontend/app/dashboard/top-workouts/: page.tsx
frontend/components/: BackButton.tsx  ClientLayoutWrapper.tsx  Navbar.tsx  RecommendationForm.tsx  WorkoutCard.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: api.ts  auth.ts  types.ts
